Fix text cutting off in playlists page

--- a/src/css/playlists.scss
+++ b/src/css/playlists.scss
@@ -8,16 +8,11 @@
     margin: 0;
 }
 
-main {
-    padding-top: 90vw;
-}
-
 .banner {
-    width: 100%;
-    height: 100vw;
-    position: absolute;
-    top: 0;
-    left: 0;
+    width: 100vw;
+    position: relative;
+    top: -80px;
+    left: -25px;
     padding: 75px 25px 0 25px;
     background-size: contain;
     font-size: 1rem;
